fixed spacing on section headers

--- a/resources/style.css
+++ b/resources/style.css
@@ -177,7 +177,7 @@ main {
 
 .section-header {
     display: flex;
-    height: 20%;
+    height: 30%;
     width: 80%;
     align-items: center;
 }
@@ -191,7 +191,7 @@ main {
 }
 
 .about-me {
-    height: 80%;
+    height: 70%;
 }
 
 /* Beginning transition background */
